[gd_scene format=3 uid="uid://b7140qyes5hqc"]

[ext_resource type="Script" uid="uid://dmvo3cd667807" path="res://Levels/Baita Level/main_level.gd" id="1_82mpy"]
[ext_resource type="PackedScene" uid="uid://y8ebu5mpmgbd" path="res://Player/player.tscn" id="1_pjtql"]
[ext_resource type="PackedScene" uid="uid://by7pmkofgujqi" path="res://Assets/models/cabinFINE.glb" id="2_75t1q"]
[ext_resource type="PackedScene" uid="uid://b8r1o28uyyjvh" path="res://Interactible/dirt/plantable_dirt.tscn" id="4_a7er8"]
[ext_resource type="PackedScene" uid="uid://ds4mdksnyneiy" path="res://Hud/Inventory/inventory.tscn" id="6_82mpy"]
[ext_resource type="PackedScene" uid="uid://bu143vv81fge1" path="res://Interactible/dirt_tree/plantable_dirt_tree.tscn" id="9_oylvt"]
[ext_resource type="Texture2D" uid="uid://dhfu8q3abpluo" path="res://Assets/autumn_field_puresky_2k.hdr" id="12_75t1q"]
[ext_resource type="PackedScene" uid="uid://br1gwjdp68rt" path="res://Hud/hud.tscn" id="13_wglfa"]
[ext_resource type="PackedScene" uid="uid://cxxbtw6kle4f6" path="res://Hud/Plant_norm_seed_interface/plant_norm_seed_inteface.tscn" id="14_f8yge"]
[ext_resource type="PackedScene" uid="uid://c4qhtb3w4o8nb" path="res://Hud/Plant_tree_interface/plant_tree_inteface.tscn" id="15_hl710"]
[ext_resource type="PackedScene" uid="uid://ctki7we0o8i8v" path="res://Hud/Sell_interface/sell_inteface.tscn" id="16_d6pax"]
[ext_resource type="PackedScene" uid="uid://cwujqf46mulrg" path="res://Interactible/Shop/shop.tscn" id="19_hl710"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bir38"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_igneb"]
albedo_color = Color(0, 0.36913243, 3.85046e-07, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_75t1q"]
panorama = ExtResource("12_75t1q")
energy_multiplier = 0.7

[sub_resource type="Sky" id="Sky_3hgmi"]
sky_material = SubResource("PanoramaSkyMaterial_75t1q")

[sub_resource type="Environment" id="Environment_l2yno"]
background_mode = 2
sky = SubResource("Sky_3hgmi")
reflected_light_source = 2
tonemap_mode = 2

[node name="MainLevel" type="Node3D" unique_id=726108182]
script = ExtResource("1_82mpy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=866992791]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Floor" type="StaticBody3D" parent="." unique_id=269744098]
transform = Transform3D(30.035, 0, 0, 0, 1, 0, 0, 0, 25.02, -3.4721076, 0, -2.5073853)
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor" unique_id=1823341827]
shape = SubResource("BoxShape3D_bir38")

[node name="CSGBox3D" type="CSGBox3D" parent="Floor" unique_id=542462643]
transform = Transform3D(0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0)
material = SubResource("StandardMaterial3D_igneb")

[node name="cabinFINE" parent="Floor" unique_id=316311193 instance=ExtResource("2_75t1q")]
transform = Transform3D(0.03329449, 0, 0, 0, 1, 0, 0, 0, 0.039968025, -0.3317222, 0.5427028, -0.28494066)

[node name="Plantable_dirt" parent="." unique_id=1420324434 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.1291275, 0.38301468, 3.1911106)

[node name="Plantable_dirt2" parent="." unique_id=1907243758 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.1291275, 0.38301468, 7.380192)

[node name="CSGBox3D" type="CSGBox3D" parent="Plantable_dirt2" unique_id=8118093]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8549452, 0, -31.688282)
size = Vector3(7.633301, 1, 19.160156)

[node name="CSGBox3D2" type="CSGBox3D" parent="Plantable_dirt2" unique_id=275101429]
transform = Transform3D(-0.010698602, 0, 0.9999427, 0, 1, 0, -0.9999427, 0, -0.010698602, 8.696002, 0, -44.411816)
size = Vector3(7.633301, 1, 19.160156)

[node name="Plantable_dirt3" parent="." unique_id=1219901438 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.393652, 0.38301468, 3.1911106)

[node name="Plantable_dirt4" parent="." unique_id=1649264017 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.393652, 0.38301468, 7.380192)

[node name="Plantable_dirt5" parent="." unique_id=468092067 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.002493, 0.38301468, 3.1911106)

[node name="Plantable_dirt6" parent="." unique_id=1635910650 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.002493, 0.38301468, 7.380192)

[node name="Plantable_dirt7" parent="." unique_id=1248900389 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.756964, 0.38301468, 3.1911106)

[node name="Plantable_dirt8" parent="." unique_id=1375833182 instance=ExtResource("4_a7er8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.756964, 0.38301468, 7.380192)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=39432126]

[node name="Hud" parent="CanvasLayer" unique_id=1988256769 instance=ExtResource("13_wglfa")]

[node name="Inventory" parent="CanvasLayer" unique_id=353013162 instance=ExtResource("6_82mpy")]
unique_name_in_owner = true
visible = false

[node name="Plant_norm_seed_inteface" parent="CanvasLayer" unique_id=332512560 instance=ExtResource("14_f8yge")]
visible = false

[node name="plant_tree_inteface" parent="CanvasLayer" unique_id=2035498318 instance=ExtResource("15_hl710")]
visible = false

[node name="sell_inteface" parent="CanvasLayer" unique_id=689759960 instance=ExtResource("16_d6pax")]
visible = false

[node name="CharacterBody3D" parent="." unique_id=168141513 instance=ExtResource("1_pjtql")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6249716, 1.5687048, 0.91131043)

[node name="shop" parent="." unique_id=1211752448 instance=ExtResource("19_hl710")]
transform = Transform3D(7.1209517, 0, 0, 0, 3.6419394, 0, 0, 0, 4.309836, 5.2827797, 2.3046598, -12.520201)

[node name="Plantable_dirt_tree" parent="." unique_id=780328294 instance=ExtResource("9_oylvt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.345822, 0.4947188, 7.5702896)

[node name="Plantable_dirt_tree2" parent="." unique_id=958582037 instance=ExtResource("9_oylvt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.345822, 0.48705935, 3.174111)

[node name="Plantable_dirt_tree3" parent="." unique_id=2127982392 instance=ExtResource("9_oylvt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.9216204, 0.48705935, 3.174111)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1276136646]
environment = SubResource("Environment_l2yno")
